Images optimized, Alt tags added on index page.

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@ section_three_description: Lead a fitness event or accept 1-on-1 training sessio
                     <video class="heroVideo portrait"
                         poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline
                         preload autoplay loop>
-                        <!-- <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_portrait }}"
-                            type="video/mp4" class="portrait"> -->
+                        <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_portrait }}"
+                            type="video/mp4" class="portrait">
                         Your browser does not support the video tag.
                     </video>
 
                     <video class="heroVideo landscape"
                         poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline
                         preload autoplay loop>
-                        <!-- <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_landscape }}"
-                            type="video/mp4" class="landscape"> -->
+                        <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_landscape }}"
+                            type="video/mp4" class="landscape">
                         Your browser does not support the video tag.
                     </video>
                 </div>
@@ -45,10 +45,10 @@ section_three_description: Lead a fitness event or accept 1-on-1 training sessio
                     <div class="width-100 app-badge-content">
                         <a class="app-badge" style="margin-right: 11px;"
                             href='https://play.google.com/store/apps/details?id=com.ubqfitinc.ubqfit&hl=en_US&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img
-                                src="{{ site.url }}{{ site.baseurl }}/assets/images/googleplay.png"></a>
+                                src="{{ site.url }}{{ site.baseurl }}/assets/images/googleplay.png" alt="Google Play Store"></a>
                         <a class="app-badge" href="https://apps.apple.com/us/app/ubqfit/id1441253233">
                             <img  src="{{ site.url }}{{ site.baseurl }}/assets/images/apple.png"  
-                            alt="Ubqfit app from appstore for IOS">
+                            alt="Apple App Store">
                         </a>
                     </div>
                     <div class="width-100 button">
@@ -65,7 +65,7 @@ section_three_description: Lead a fitness event or accept 1-on-1 training sessio
                         <div class="width-50 float-left mobile-home-img">
                             <a href="javascript:void(0)">
                                 <img src="{{ site.url }}{{ site.baseurl }}{{ page.section_one_image }}"
-                                    style="width: 100%;max-width: 500px;" class="margin-left-5">
+                                    style="width: 100%;max-width: 500px;" class="margin-left-5" alt="Marketing Image of Application or Feature">
                             </a>
                         </div>
                         <div class="width-50 float-right">
@@ -84,7 +84,7 @@ section_three_description: Lead a fitness event or accept 1-on-1 training sessio
 
                         <div class="width-100 bg-fc center bor-bot-7 watch-img">
                             <a href="javascript:void(0)">
-                                <img src="{{ site.url }}{{ site.baseurl }}{{ page.section_two_image }}">
+                                <img src="{{ site.url }}{{ site.baseurl }}{{ page.section_two_image }}" alt="Marketing Image of Application or Feature">
                             </a>
                         </div>
                     </div>
@@ -100,7 +100,7 @@ section_three_description: Lead a fitness event or accept 1-on-1 training sessio
                         <div class="width-50 float-right traiermoney-img">
                             <a href="javascript:void(0)">
                                 <img src="{{ site.url }}{{ site.baseurl }}{{ page.section_three_image }}"
-                                    class="bor-rad-20">
+                                    class="bor-rad-20" alt="Marketing Image of Application or Feature">
                             </a>
                         </div>
                     </div>
@@ -111,7 +111,7 @@ section_three_description: Lead a fitness event or accept 1-on-1 training sessio
     <div class="download-app appinstall-view" id="download-app">
         <div class="badge-wrapper">
             <div class="width-100 top-banner">
-                <img src="{{ site.url }}{{ site.baseurl }}/assets/images/app-dash-view.png">
+                <img src="{{ site.url }}{{ site.baseurl }}/assets/images/app-dash-view.png" alt="Marketing Image of Application or Feature">
             </div>
             <div class="appinstall-details">
                 <div class="width-100 bottom-logo">
@@ -124,9 +124,9 @@ section_three_description: Lead a fitness event or accept 1-on-1 training sessio
                 <div class="width-100 bottom-app">
                     <a class="app-badge"
                         href='https://play.google.com/store/apps/details?id=com.ubqfitinc.ubqfit&hl=en_US&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img
-                            src="{{ site.url }}{{ site.baseurl }}/assets/images/googleplay.png"></a>
+                            src="{{ site.url }}{{ site.baseurl }}/assets/images/googleplay.png" alt="Google Play Store"></a>
                     <a class="app-badge" href="https://apps.apple.com/us/app/ubqfit/id1441253233" target="_blank"
-                        rel="noreferrer noopener"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/apple.png"></a>
+                        rel="noreferrer noopener"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/apple.png" alt="Apple App Store"></a>
                 </div>
             </div>
         </div>
@@ -137,27 +137,27 @@ section_three_description: Lead a fitness event or accept 1-on-1 training sessio
     <div class="wrapper-to-center">
         <div class="instagram-block">
             <img class="watcher pointer" width="100%"
-                src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
+                src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" alt="Instagram Placeholder">
             <span class="instagram-feed-hover"></span>
         </div>
         <div class="instagram-block">
             <img class="watcher pointer" width="100%"
-                src="{{ site.url }}{{ site.baseurl }}/assets/images/tranier-ex.png">
+                src="{{ site.url }}{{ site.baseurl }}/assets/images/tranier-ex.png" alt="Instagram Placeholder">
             <span class="instagram-feed-hover"></span>
         </div>
         <div class="instagram-block">
             <img class="watcher pointer" width="100%"
-                src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
+                src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" alt="Instagram Placeholder">
             <span class="instagram-feed-hover"></span>
         </div>
         <div class="instagram-block">
             <img class="watcher pointer" width="100%"
-                src="{{ site.url }}{{ site.baseurl }}/assets/images/tranier-ex.png">
+                src="{{ site.url }}{{ site.baseurl }}/assets/images/tranier-ex.png" alt="Instagram Placeholder">
             <span class="instagram-feed-hover"></span>
         </div>
         <div class="instagram-block">
             <img class="watcher pointer" width="100%"
-                src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
+                src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" alt="Instagram Placeholder">
             <span class="instagram-feed-hover"></span>
         </div>
     </div>
