--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@ section_three_description: Lead a fitness event or accept 1-on-1 training sessio
                     value="https://www.youtube.com/embed/iC3mXqIMbcQ?autoplay=0&modestbranding=1;showinfo=0;rel=0">
                 <div class="watch-video">
                     <iframe
+                        title="YouTube Video"
                         src="https://www.youtube.com/embed/iC3mXqIMbcQ?autoplay=0&controls=0&modestbranding=1;showinfo=0;rel=0"
                         frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
