--- a/busy-executive.html
+++ b/busy-executive.html
@@ -34,7 +34,7 @@ section_five_description: Book training sessions with your favorite trainer 30 d
   <div class="download-app appinstall-view" id="download-app">
     <div class="badge-wrapper">
       <div class="width-100 top-banner">
-        <img src="{{ site.url }}{{ site.baseurl }}/assets/images/app-dash-view.png">
+        <img src="{{ site.url }}{{ site.baseurl }}/assets/images/app-dash-view.jpg">
       </div>
       <div class="appinstall-details">
         <div class="width-100 bottom-logo">
