--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ section_three_description: Lead a fitness event or accept 1-on-1 training sessio
     <div class="download-app appinstall-view" id="download-app">
         <div class="badge-wrapper">
             <div class="width-100 top-banner">
-                <img src="{{ site.url }}{{ site.baseurl }}/assets/images/app-dash-view.png" alt="Marketing Image of Application or Feature">
+                <img src="{{ site.url }}{{ site.baseurl }}/assets/images/app-dash-view.jpg" alt="Marketing Image of Application or Feature">
             </div>
             <div class="appinstall-details">
                 <div class="width-100 bottom-logo">
