--- a/testimonials.html
+++ b/testimonials.html
@@ -11,7 +11,7 @@ hero_video_description: See what others are saying.
   <div class="download-app appinstall-view" id="download-app">
     <div class="badge-wrapper">
       <div class="width-100 top-banner">
-        <img src="{{ site.url }}{{ site.baseurl }}/assets/images/app-dash-view.png">
+        <img src="{{ site.url }}{{ site.baseurl }}/assets/images/app-dash-view.jpg">
       </div>
       <div class="appinstall-details">
         <div class="width-100 bottom-logo">
