--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@ hero_video_description: Read about the latest fitness tricks and trends.
   <div class="download-app appinstall-view" id="download-app">
     <div class="badge-wrapper">
       <div class="width-100 top-banner">
-        <img src="{{ site.url }}{{ site.baseurl }}/assets/images/app-dash-view.png">
+        <img src="{{ site.url }}{{ site.baseurl }}/assets/images/app-dash-view.jpg">
       </div>
       <div class="appinstall-details">
         <div class="width-100 bottom-logo">
@@ -71,4 +71,3 @@ hero_video_description: Read about the latest fitness tricks and trends.
       V 2.1
     </p>
   </div>
-  
