--- a/ourstory.html
+++ b/ourstory.html
@@ -37,7 +37,7 @@ section_description: '<p>Ellie grew up living all over the world, from the Middl
   <div class="download-app appinstall-view" id="download-app">
     <div class="badge-wrapper">
       <div class="width-100 top-banner">
-        <img src="{{ site.url }}{{ site.baseurl }}/assets/images/app-dash-view.png">
+        <img src="{{ site.url }}{{ site.baseurl }}/assets/images/app-dash-view.jpg">
       </div>
       <div class="appinstall-details">
         <div class="width-100 bottom-logo">
