--- a/pricing.html
+++ b/pricing.html
@@ -14,7 +14,7 @@ section_two_description: "<p>It’s free to watch. No commitments. </p><p>Choose
   <div class="download-app appinstall-view" id="download-app">
     <div class="badge-wrapper">
       <div class="width-100 top-banner">
-        <img src="{{ site.url }}{{ site.baseurl }}/assets/images/app-dash-view.png">
+        <img src="{{ site.url }}{{ site.baseurl }}/assets/images/app-dash-view.jpg">
       </div>
       <div class="appinstall-details">
         <div class="width-100 bottom-logo">
