--- a/trainer.html
+++ b/trainer.html
@@ -167,30 +167,7 @@ section_five_description: Make your calendar available for clients to book sessi
         </div>
     </div>
     <div class="width-100 bg-gray ">
-        <div class="instagram-feed relative">
-            <div class="wrapper-to-center">
-                <div class="instagram-block">
-                    <img class="watcher pointer" width="100%" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
-                    <span class="instagram-feed-hover"></span>
-                </div>
-                <div class="instagram-block">
-                    <img class="watcher pointer" width="100%" src="{{ site.url }}{{ site.baseurl }}/assets/images/tranier-ex.png">
-                    <span class="instagram-feed-hover"></span>
-                </div>
-                <div class="instagram-block">
-                    <img class="watcher pointer" width="100%" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
-                    <span class="instagram-feed-hover"></span>
-                </div>
-                <div class="instagram-block">
-                    <img class="watcher pointer" width="100%" src="{{ site.url }}{{ site.baseurl }}/assets/images/tranier-ex.png">
-                    <span class="instagram-feed-hover"></span>
-                </div>
-                <div class="instagram-block">
-                    <img class="watcher pointer" width="100%" src="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png">
-                    <span class="instagram-feed-hover"></span>
-                </div>
-            </div>
-        </div>
+        {% include instagram.html %}
     </div>
     <!--   containers -->
     <div class="footer-version">
