--- a/trainer-terms-conditions.html
+++ b/trainer-terms-conditions.html
@@ -1,3 +1,5 @@
+---
+---
 <!doctype html>
 <html lang="en">
 
@@ -5,12 +7,12 @@
 	<meta charset="utf-8">
 	<title>UBQFIT</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="icon" type="image/x-icon" href="images/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="{{ site.url }}{{ site.baseurl }}/assets/images/favicon.ico">
    <!-- Required meta tags -->
    <meta name=keywords content="fitness app,fitness partner,gym,gym trainer app, health and fitness app, workout app, health app">
    <meta name=description content="Your fitness partner - Live 1-on-1 Workouts. Train when you want, where you want, without commitments">
-   <meta property=og:image title="UBQFIT" content=images/UBQFIT-Banner.png />
-   <link rel=image_src title="UBQFIT" href="images/UBQFIT-Banner.png" />
+   <meta property=og:image title="UBQFIT" content="{{ site.url }}{{ site.baseurl }}/assets/images/UBQFIT-Banner.png" />
+   <link rel=image_src title="UBQFIT" href="{{ site.url }}{{ site.baseurl }}/assets/images/UBQFIT-Banner.png" />
    <meta name="author" content="UBQFIT">
    <meta name="robots" content="index, follow">
    <meta name="theme-color" content="#0e0e12" />
@@ -36,8 +38,8 @@
    <meta property="og:site_name" content="UBQFIT">
    <meta property="og:url" content="https://ubqfit.com/">
    <meta property="og:description" content="Your fitness partner - Live 1-on-1 Workouts. Train when you want, where you want, without commitments">
-   <meta property="og:video" content="images/video/hero_vid_landscape.mp4" />
-   <meta property="og:video:secure_url" content="images/video/hero_vid_landscape.mp4" />
+   <meta property="og:video" content="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_landscape.mp4" />
+   <meta property="og:video:secure_url" content="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_landscape.mp4" />
    <meta property="og:video:type" content="application/x-shockwave-flash" />
    <meta property="og:video:width" content="400" />
    <meta property="og:video:height" content="300" />
@@ -53,9 +55,9 @@
 	<meta name="p:domain_verify" content="ada36ea9b646725c3c922c8d964104bf" />
 
 	<!-- CSS files -->
-	<link rel="stylesheet" href="css/stylesheet.css">
-	<link rel="stylesheet" href="css/media.css">
-	<link rel="stylesheet" href="/js/intl-tel-input/build/css/intlTelInput.min.css">
+	<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/stylesheet.css">
+	<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/media.css">
+	<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/js/intl-tel-input/build/css/intlTelInput.min.css">
 	<style>
 		/* body {
         background-color: #0e0e12;
@@ -106,7 +108,7 @@
 </head>
 
 <body>
-	<div class="containers">
+	<div class="">
 		<div class="header-top center">
 			<p>
 				Get 95% off on a 1-on-1 Session. <a style="white-space: nowrap;" class="review_btn_prelaunch"
@@ -116,7 +118,7 @@
 		<header>
 			<div class="logo">
 				<a href="index.html">
-					<img src="images/logo.svg" title="Logo" alt="Logo" width="125px" height="35px">
+					<img src="{{ site.url }}{{ site.baseurl }}/assets/images/logo.svg" title="Logo" alt="Logo" width="125px" height="35px">
 				</a>
 			</div>
 			<div class="menumobileview">
@@ -179,15 +181,15 @@
                         Your browser does not support the video tag.
                     </video>-->
 
-										<video class="heroVideo portrait" poster="images/img/workout.jpg" muted playsinline preload autoplay
+										<video class="heroVideo portrait" poster="{{ site.url }}{{ site.baseurl }}/assets/images/img/workout.jpg" muted playsinline preload autoplay
 											loop>
-											<source src="images/video/hero_vid_portrait.mp4" type="video/mp4" class="portrait">
+											<source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_portrait.mp4" type="video/mp4" class="portrait">
 											Your browser does not support the video tag.
 										</video>
 
-										<video class="heroVideo landscape" poster="images/img/workout.jpg" muted playsinline preload
+										<video class="heroVideo landscape" poster="{{ site.url }}{{ site.baseurl }}/assets/images/img/workout.jpg" muted playsinline preload
 											autoplay loop>
-											<source src="images/video/hero_vid_landscape.mp4" type="video/mp4" class="landscape">
+											<source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_landscape.mp4" type="video/mp4" class="landscape">
 											Your browser does not support the video tag.
 										</video>
 										<div class="banner-tittle">
@@ -511,7 +513,7 @@
 
 		<div class="width-100">
 			<div class="link-session relative">
-				<img src="images/screen-bg-1.png" class="link-banner" width="100%" height="600px">
+				<img src="{{ site.url }}{{ site.baseurl }}/assets/images/screen-bg-1.png" class="link-banner" width="100%" height="600px">
 				<div class="contact-link">
 					<h3>
 						Not just fit, UBQFIT.
@@ -528,14 +530,13 @@
                   <button class="cmg-soon" (click)="phoneNumberChange('sentLink')">Send Link</button>
 
               </div> -->
-					<div id="textpuff-widget" class="relative margin-bottom-20"></div>
 					<div class="app-store">
 						<a href="https://apps.apple.com/us/app/ubqfit/id1441253233" target="_blank" rel="noreferrer noopener">
-							<img src="images/apple.png">
+							<img src="{{ site.url }}{{ site.baseurl }}/assets/images/apple.png">
 						</a>
 						<a href="https://play.google.com/store/apps/details?id=com.ubqfitinc.ubqfit&hl=en_US" target="_blank"
 							rel="noreferrer noopener">
-							<img src="images/googleplay.png">
+							<img src="{{ site.url }}{{ site.baseurl }}/assets/images/googleplay.png">
 						</a>
 					</div>
 				</div>
@@ -751,7 +752,7 @@
 		</div>
 	</div>
 	<!-- js Files -->
-	<script src="js/jquery-3.4.1.min.js"></script>
+	<script src="{{ site.url }}{{ site.baseurl }}/assets/js/jquery-3.4.1.min.js"></script>
 	<script type='text/javascript'>
 		(function () {
 			var tp = document.createElement('script');
@@ -773,14 +774,14 @@
 	</script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.14.0/jquery.validate.min.js"></script>
 	<!-- intel-input phone number validation -->
-	<script src="js/intl-tel-input/build/js/intlTelInput.js"></script>
+	<script src="{{ site.url }}{{ site.baseurl }}/assets/js/intl-tel-input/build/js/intlTelInput.js"></script>
 	<!-- Start of ubqfit Zendesk Widget script -->
 	<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=70d2f53e-c4b9-48da-bc27-e5646f666d9d">
 	</script>
 	<!-- End of ubqfit Zendesk Widget script -->
-	<script src="js/custom.js"></script>
-	<script src="js/moment.js"></script>
-	<script src="js/services.js"></script>
+	<script src="{{ site.url }}{{ site.baseurl }}/assets/js/custom.js"></script>
+	<script src="{{ site.url }}{{ site.baseurl }}/assets/js/moment.js"></script>
+	<script src="{{ site.url }}{{ site.baseurl }}/assets/js/services.js"></script>
 
 	<script>
 		moment().format();
