--- a/payment-success.html
+++ b/payment-success.html
@@ -1,3 +1,5 @@
+---
+---
 <!doctype html>
 <html lang="en">
 
@@ -5,12 +7,12 @@
   <meta charset="utf-8">
   <title>UBQFIT</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="{{ site.url }}{{ site.baseurl }}/assets/images/favicon.ico">
     <!-- Required meta tags -->
     <meta name=keywords content="fitness app,fitness partner,gym,gym trainer app, health and fitness app, workout app, health app">
     <meta name=description content="Your fitness partner - Live 1-on-1 Workouts. Train when you want, where you want, without commitments">
-    <meta property=og:image title="UBQFIT" content=images/UBQFIT-Banner.png />
-    <link rel=image_src title="UBQFIT" href="images/UBQFIT-Banner.png" />
+    <meta property=og:image title="UBQFIT" content="{{ site.url }}{{ site.baseurl }}/assets/images/UBQFIT-Banner.png" />
+    <link rel=image_src title="UBQFIT" href="{{ site.url }}{{ site.baseurl }}/assets/images/UBQFIT-Banner.png" />
     <meta name="author" content="UBQFIT">
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#0e0e12" />
@@ -36,8 +38,8 @@
     <meta property="og:site_name" content="UBQFIT">
     <meta property="og:url" content="https://ubqfit.com/">
     <meta property="og:description" content="Your fitness partner - Live 1-on-1 Workouts. Train when you want, where you want, without commitments">
-    <meta property="og:video" content="images/video/hero_vid_landscape.mp4" />
-    <meta property="og:video:secure_url" content="images/video/hero_vid_landscape.mp4" />
+    <meta property="og:video" content="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_landscape.mp4" />
+    <meta property="og:video:secure_url" content="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_landscape.mp4" />
     <meta property="og:video:type" content="application/x-shockwave-flash" />
     <meta property="og:video:width" content="400" />
     <meta property="og:video:height" content="300" />
@@ -49,15 +51,15 @@
     content="397289741886-ptcimf1bctecvm562fi2j2eukl2kgad5.apps.googleusercontent.com">
   <!-- google INIT -->
   <script src="https://apis.google.com/js/platform.js" async defer></script>
-  <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="js/services.js"></script>
+  <script src="{{ site.url }}{{ site.baseurl }}/assets/js/jquery-3.4.1.min.js"></script>
+  <script src="{{ site.url }}{{ site.baseurl }}/assets/js/services.js"></script>
   <!-- Pintrest meta -->
   <meta name="p:domain_verify" content="ada36ea9b646725c3c922c8d964104bf" />
 
   <!-- CSS files -->
-  <link rel="stylesheet" href="css/stylesheet.css">
-  <link rel="stylesheet" href="css/media.css">
-  <link rel="stylesheet" href="/js/intl-tel-input/build/css/intlTelInput.min.css">
+  <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/stylesheet.css">
+  <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/media.css">
+  <!-- <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/js/intl-tel-input/build/css/intlTelInput.min.css"> -->
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet">
