--- a/trainer-terms-conditions.html
+++ b/trainer-terms-conditions.html
@@ -579,13 +579,13 @@
 						Join Us
 					</h4>
 					<li>
-						<a href="trainer.html">Trainers</a>
+						<a href="{{ site.url }}{{ site.baseurl }}/trainer.html">Trainers</a>
 					</li>
 					<li>
-						<a href="trainee.html">Trainees</a>
+						<a href="{{ site.url }}{{ site.baseurl }}/trainee.html">Trainees</a>
 					</li>
 					<li>
-						<a href="testimonials.html">Testimonials</a>
+						<a href="{{ site.url }}{{ site.baseurl }}/testimonials.html">Testimonials</a>
 					</li>
 				</ul>
 				<ul>
@@ -593,10 +593,10 @@
 						About
 					</h4>
 					<li>
-						<a href="ourstory.html">Our Story</a>
+						<a href="{{ site.url }}{{ site.baseurl }}/ourstory.html">Our Story</a>
 					</li>
 					<li>
-						<a href="blog.html">Blog</a>
+						<a href="{{ site.url }}{{ site.baseurl }}/blog.html">Blog</a>
 					</li>
 				</ul>
 				<ul>
@@ -604,7 +604,7 @@
 						Support
 					</h4>
 					<li>
-						<a href="contactus.html">Contact Us</a>
+						<a href="{{ site.url }}{{ site.baseurl }}/contactus.html">Contact Us</a>
 					</li>
 					<!-- <li>
                             <a (click)="openFaq()" href="javascript:void(0)">FAQs</a>
@@ -623,13 +623,13 @@
 						© 2019 UBQFIT
 					</p>
 					<li>
-						<a href="privacy-policy.html">Privacy Policy</a>
+						<a href="{{ site.url }}{{ site.baseurl }}/privacy-policy.html">Privacy Policy</a>
 					</li>
 					<li>
-						<a href="terms-conditions.html">Terms & Conditions</a>
+						<a href="{{ site.url }}{{ site.baseurl }}/terms-conditions.html">Terms & Conditions</a>
 					</li>
 					<li>
-						<a href="dmca-policy.html">DMCA Policy</a>
+						<a href="{{ site.url }}{{ site.baseurl }}/dmca-policy.html">DMCA Policy</a>
 					</li>
 				</ul>
 			</div>
