--- a/404.html
+++ b/404.html
@@ -1,10 +1,18 @@
-
+---
+layout: default
+---
 
 <style type="text/css" media="screen">
   .container {
-    margin: 10px auto;
+    margin: 10px auto 10px auto;
     max-width: 600px;
     text-align: center;
+    min-height: 75vh;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
   h1 {
     margin: 30px 0;
