Fixed landing pages issues.

--- a/busy-mommy.html
+++ b/busy-mommy.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: landing-page-busy
 hero_video_portrait: "/assets/images/busy-mommy-verticle.mp4"
 hero_video_landscape: "/assets/images/busy-mommy.mp4"
 hero_video_title: Trainee
