--- a/busy-executive.html
+++ b/busy-executive.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: landing-page-busy
 hero_video_portrait: "/assets/images/busy-executive-verticle.mp4"
 hero_video_landscape: "/assets/images/busy-executive.mp4"
 hero_video_title: Trainee
