--- a/pricing.html
+++ b/pricing.html
@@ -44,14 +44,14 @@ section_two_description: "<p>It’s free to watch. No commitments. </p><p>Choose
                 <div class="width-100 home-banner heroContainer">
                   <div class="width-100">
                     <video class="heroVideo portrait"
-                      poster="http://localhost:4000/assets/images/home-banner.png" muted playsinline preload
+                      poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline preload
                       autoplay loop>
                       <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_portrait }}"
                         type="video/mp4" class="portrait">
                       Your browser does not support the video tag.
                     </video>
                     <video class="heroVideo landscape"
-                      poster="http://localhost:4000/assets/images/home-banner.png" muted playsinline preload
+                      poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline preload
                       autoplay loop>
                       <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_landscape }}"
                         type="video/mp4" class="landscape">
